<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.PlacemarkListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <Button
        android:id="@+id/startrouteBtn"
        android:layout_width="180dp"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:text="@string/start_button" />

    <Button
        android:id="@+id/destinationrouteBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="210dp"
        android:text="@string/end_button" />


    <TextView
        android:id="@+id/startinfo"
        android:layout_width="180dp"
        android:layout_marginTop="110dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/start_location_will_be_displayed" />

    <TextView
        android:id="@+id/destinationinfo"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginHorizontal="210dp"
        android:text=""
        android:hint="@string/destination_location_will_be_displayed" />

    <Button
        android:id="@+id/beginrouteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/begin_routeBtn"
        android:visibility="invisible"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>